PharmaDemo/src/objects/Meeting_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting1__c</fullName>
        <label>Meeting</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Meeting Budgets</relationshipLabel>
        <relationshipName>Meeting_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Meeting Budget</label>
    <nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Meeting Budget No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>